[project]
name = "prettier"
version = "0.1.3"
dependencies = ["colorama"]
authors = [{name = "cromizone", email = "cromizonebolt@gmail.com"}]
description = "A JSON syntax highlighter"
readme = "README.md"
license = {text = "MIT License"}
keywords = ["json", "terminal", "highlighter", "pretty", "print"]
